--- a/28 commit.html
+++ b/28 commit.html
@@ -141,7 +141,7 @@
         <p id="subtitle">
           Lorem ipsum dolor sit amet, consectetur 
           adipiscing elit. Suspendisse consectetur
-          justo eu nunc consequat.</p>
+          justo eu nunc consequatt.</p>
           </pre>
     </pre>
   </div>
