--- a/28 commit.html
+++ b/28 commit.html
@@ -11,6 +11,8 @@
   <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
   <!-- NUNITO FONT ADDED -->
   <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+  <!-- MONTSERRAT FONT ADDED -->
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <!-- BOOTSTRAP ADDED -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -19,79 +21,15 @@
     crossorigin="anonymous"></script>
   <title>Document</title>
 
-  <style>
-    #nav_barassign {
-      position: absolute;
-      top: 65px;
-      width: 1440px;
-      margin-left: 560px;
 
+  <link rel="stylesheet" href="style.css">
 
-    }
-
-    #banner {
-
-      background-image: linear-gradient(180deg, rgb(0, 0, 0)40px, rgba(0, 0, 0, 0)200px), url(assets/main\ banner.png);
-      height: 798px;
-      background-repeat: no-repeat;
-
-    }
-
-    #home_id,
-    #product_id,
-    #promo_id,
-    #about_id,
-    #contact_id {
-      color: azure;
-      font-family: poppins;
-      font-weight: bold;
-      padding-left: 50px;
-      font-size: 25px;
-
-    }
-
-    #logo {
-      margin-top: 50px;
-      margin-left: 20px;
-    }
-
-    #main_info {
-      height: 400px;
-
-    }
-
-    #off_title {
-      position: absolute;
-      top: 115px;
-
-      right: 660px;
-    }
-
-    #offer {
-      font-family: archivo;
-      font-weight: bolder;
-      color: white;
-      font-size: 91px;
-      filter: drop-shadow(5px 5px 2px black);
-      height: 400px;
-    }
-
-    #subtitle {
-      margin-left: 200px;
-      font-family: nunito;
-      font-size: 20px;
-      color: white;
-      position:absolute;
-      top:350px;
-      left:0px;
-    }
-  </style>
 </head>
 
 <body>
 
   <div id="banner">
-    <img id="logo" src="assets/logo.png">
+    <img id="logo" src="assets/logo.png.png">
 
   </div>
   <div id="nav_barassign">
@@ -134,18 +72,84 @@
   </div>
   <div id="main_info">
     <pre id="off_title"><h1 id="offer">
-          Get Cashback
-          Up to 50%
+   Get Cashback
+    Up to 50%
         </h1>
         <pre>
         <p id="subtitle">
-          Lorem ipsum dolor sit amet, consectetur 
-          adipiscing elit. Suspendisse consectetur
-          justo eu nunc consequatt.</p>
+Lorem ipsum dolor sit amet, consectetur 
+adipiscing elit. Suspendisse consectetur
+justo eu nunc consequatt.</p>
           </pre>
     </pre>
+    <img id="on1" src="assets/order now.png">
   </div>
 
+  <div id="page2">
+    <div id="bgobj1">
+      <img src="assets/group 2 vector.png">
+
+    </div>
+
+    <h3 id="page2head"> Our Chef </h3>
+    <pre id="page2sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Vivamus lacinia odio vitae vestibulum vestibulum. </pre>
+
+
+    <img id="chef1" src="assets/Place Your Image Here (Double Click to Edit) (3).png">
+    <h3 id="chefnames">AIDEN HUNTER </h3>
+    <h6 id="chefdesignations">Founder</h6>
+
+
+    <img id="chef2" src="assets/Place Your Image Here (Double Click to Edit) (2).png">
+    <h3 id="chefname2">ETHEL RAMSEY </h3>
+    <h6 id="chefdesignation2">Co-Founder</h6>
+
+    <img id="chef3" src="assets/Place Your Image Here (Double Click to Edit) (1).png">
+    <h3 id="chefname3"> FANNIE STEWART </h3>
+    <h6 id="chefdesignation3">Co-Founder</h6>
+
+  </div>
+
+  <div id="page3">
+
+    <img id="p3burger" src="assets/Shape.png" height="477px" width="479px">
+
+    <h1 id="p3title">Best Burger </h1>
+
+    <pre id="page3sub">
+  Lorem ipsum dolor sit amet, consectetur 
+  adipiscing elit. Vivamus lacinia odio vitae 
+  vestibulum vestibulum. </pre>
+
+
+    <img id="on2" src="assets/order now 2.png">
+
+  </div>
+
+  <div id="page4">
+
+    
+    <div id="bgobj2">
+      <img src="assets/group4 vector.png">
+
+    </div>
+
+    <h1 id="p4title">Big Burger </h1>
+
+    <pre id="page4sub">
+      Lorem ipsum dolor sit amet, 
+      consectetur adipiscing elit.Vivamus
+      lacinia odio vitae vestibulum vestibulum. </pre>
+
+      <img id="on3" src="assets/order now.png" width="323px" height="66px">
+
+      <img id="p4burger" src="assets/Shape 2.png">
+    
+
+
+
+  </div>
 
 
 
