--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <!-- CALISTOGA FONT ADDED -->
   <link href='https://fonts.googleapis.com/css?family=Calistoga' rel='stylesheet'>
-
-
   <!-- BOOTSTRAP ADDED -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -24,56 +22,58 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <title>Document</title>
-
-
+  <!-- EXTERNAL  ADDED -->
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
-
+  <!-- LOGO ADDED -->
   <div id="banner">
     <img id="logo" src="assets/logo.png.png">
-
   </div>
+
+  <!-- NAV BAR  ADDED -->
   <div id="nav_barassign">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+          <!-- NAV BAR CONTENTS  ADDED -->
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#" id="home_id">HOME</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#" id="product_id">PRODUCT</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#" id="promo_id">
                 PROMO
               </a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#" id="about_id">
                 ABOUT
               </a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link " href="#" id="contact_id">CONTACT</a>
             </li>
           </ul>
-
           </form>
         </div>
       </div>
     </nav>
   </div>
+  <!-- PAGE 1 TITLE -->
   <div id="main_info">
     <pre id="off_title"><h1 id="offer">
    Get Cashback
@@ -86,24 +86,27 @@
           justo eu nunc consequatt.</p>
           </pre>
     </pre>
-    <img id="on1" src="assets/order now.png">
+    <!-- PAGE 1 ORDER NOW BUTTON ADDED -->
+    <a href=" ">
+      <img id="on1" src="assets/order now.png">
+    </a>
   </div>
 
+  <!-- PAGE 2 BACKGROUND ADDED -->
   <div id="page2">
     <div id="bgobj1">
       <img src="assets/group 2 vector.png">
-
     </div>
 
+    <!-- PAGE 2 HEADINGS ADDED -->
     <h3 id="page2head"> Our Chef </h3>
     <pre id="page2sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Vivamus lacinia odio vitae vestibulum vestibulum. </pre>
 
-
+    <!-- PAGE 2 CHEF IMAGES ADDED -->
     <img id="chef1" src="assets/Place Your Image Here (Double Click to Edit) (3).png">
     <h3 id="chefnames">AIDEN HUNTER </h3>
     <h6 id="chefdesignations">Founder</h6>
-
 
     <img id="chef2" src="assets/Place Your Image Here (Double Click to Edit) (2).png">
     <h3 id="chefname2">ETHEL RAMSEY </h3>
@@ -112,172 +115,193 @@
     <img id="chef3" src="assets/Place Your Image Here (Double Click to Edit) (1).png">
     <h3 id="chefname3"> FANNIE STEWART </h3>
     <h6 id="chefdesignation3">Co-Founder</h6>
-
   </div>
 
+  <!-- PAGE 3  ADDED -->
   <div id="page3">
-
+    <!-- PAGE 3 BACKGROUND ADDED -->
     <img id="p3burger" src="assets/Shape.png" height="477px" width="479px">
-
+    <!-- PAGE 3 HEADING ADDED -->
     <h1 id="p3title">Best Burger </h1>
-
+    <!-- PAGE 3 SUB-HEADING ADDED -->
     <pre id="page3sub">
   Lorem ipsum dolor sit amet, consectetur 
   adipiscing elit. Vivamus lacinia odio vitae 
   vestibulum vestibulum. </pre>
-
-
-    <img id="on2" src="assets/order now 2.png">
-
+    <!-- PAGE 3 ORDER NOW BUTTON ADDED -->
+    <a href="">
+      <img id="on2" src="assets/order now 2.png">
+    </a>
   </div>
 
+  <!-- PAGE 4 ADDED -->
   <div id="page4">
 
-
+    <!-- PAGE 4 BACKGROUND ADDED -->
     <div id="bgobj2">
       <img src="assets/group4 vector.png">
-
     </div>
 
+    <!-- PAGE 4 TITLE ADDED -->
     <h1 id="p4title">Big Burger </h1>
-
+    <!-- PAGE 4 SUB-TITLE ADDED -->
     <pre id="page4sub">
       Lorem ipsum dolor sit amet, 
       consectetur adipiscing elit.Vivamus
       lacinia odio vitae vestibulum vestibulum. </pre>
-
-    <img id="on3" src="assets/order now.png" width="323px" height="66px">
-
+    <!-- PAGE 4 ORDER NOW BUTTON ADDED -->
+    <a href=" ">
+      <img id="on3" src="assets/order now.png" width="323px" height="66px">
+    </a>
     <img id="p4burger" src="assets/Shape 2.png">
-
   </div>
 
-
+  <!-- PAGE 5 ADDED -->
   <div id="page5">
-
+    <!-- PAGE 5 TITLE ADDED -->
     <h1 id="p5title"> Statistics </h1>
-
+    <!-- PAGE 5 SUB-TITLE ADDED -->
     <pre id="page5sub">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Vivamus lacinia odio vitae vestibulum vestibulum. </pre>
 
-
+    <!-- PAGE 5 STATS MENU ADDED -->
     <img id="p5card1" src="assets/card1.png">
     <img id="p5card2" src="assets/card 2.png">
     <img id="p5card3" src="assets/card 3.png">
-
-
   </div>
 
+  <!-- PAGE 6 ADDED -->
   <div id="page6">
-
+    <!-- PAGE 6 BACKGROUND ADDED -->
     <div id="p6bg">
       <img src="assets/group 7 vector.png" style="width:1440px;">
     </div>
+    <!-- PAGE 6 TITLE ADDED -->
     <h1 id="p6title"> Popular Package</h1>
-
+    <!-- PAGE 6 ORDER MENU ADDED -->
     <div class="card" style="width: 18rem;">
-      <img src="assets/p6card.png" width="337px" height="446px">
-
-
+      <a href="">
+        <img src="assets/p6card.png" width="337px" height="446px">
+      </a>
     </div>
 
     <div class="card2" style="width: 18rem;">
-      <img src="assets/p6card2.png" width="337px" height="446px">
-
-
+      <a href="">
+        <img src="assets/p6card2.png" width="337px" height="446px">
+      </a>
     </div>
 
     <div class="card3" style="width: 18rem;">
-      <img src="assets/p6card3.png" width="337px" height="446px">
-
-
+      <a href="">
+        <img src="assets/p6card3.png" width="337px" height="446px">
+      </a>
     </div>
   </div>
 
-
+  <!-- PAGE 7 ADDED -->
   <div id="page7">
-
-
-
+    <!-- PAGE 7 OVERLAY ADDED -->
     <div id="imageoverlay">
-
-
     </div>
+    <!-- PAGE 7 SUBTITLE ADDED -->
     <pre id="p7sub">
         Lorem ipsum dolor sit amet, consectetur 
         adipiscing elit. Vivamus lacinia odio vitae 
         vestibulum vestibulum. 
       </pre>
-
+    <!-- PAGE 7 TITLE ADDED -->
     <h1 id="p7heading"> Barry Henderson </h1>
-
   </div>
 
 
-
+  <!-- PAGE 8 ADDED -->
   <div id="page8">
+    <!-- PAGE 8 BACKGROUND ADDED -->
     <div id="bgobj3">
       <img src="assets/group 8 vector.png">
     </div>
-
-
+    <!-- PAGE 8 TITLE ADDED -->
     <h1 id="p8title">Don't Miss Our Updates </h1>
-
+    <!-- PAGE 8 SUB-TITLE ADDED -->
     <pre id="p8sub">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Vivamus lacinia odio vitae vestibulum vestibulum. 
       </pre>
-
-    <img id="emailinput" src="assets/email.png">
-    <button type="button" id="email"> <img src="assets/subscr.png" height="63px"> </button>
-
+    <!-- PAGE 8 EMAIL INPUT FIELD ADDED -->
+    <input type="email" class="filter">
+    <span class="placeholder">Your Email </span>
+    <button type="button" id="emailbut"> <img src="assets/subscr.png" height="63px"> </button>
   </div>
-
-
-</div>
-<div id="page9">
-  <h1 id="col1heading">  About Us </h1>
-  <pre id="col1para"> 
+  <!-- PAGE 9 ADDED -->
+  <div id="page9">
+    <!-- PAGE 9 COLUMN 1 ADDED -->
+    <h1 id="col1heading"> About Us </h1>
+    <pre id="col1para">
      Lorem ipsum dolor sit amet, consectetur
      adipiscing elit. Aliquam at dignissim nunc, 
      id maximus ex. Etiam nec dignissim elit, at 
      dignissim enim. 
   </pre>
+    <!-- PAGE 9 COLUMN 1 LINKS ADDED -->
+    <a href=""><img src="assets/Instagram.png" id="ig"></a>
+    <a href=""><img src="assets/Facebook.png" id="fb"></a>
+    <a href=""> <img src="assets/Twitter.png" id="twi"></a>
+    <a href=""><img src="assets/WhatsApp (1).png" id="wp"> </a>
+    <!-- PAGE 9 COLUMN 2 ADDED -->
+    <h1 id="col2heading"> About </h1>
+    <ul type="none" id="col2">
+      <a href=" ">
+        <li>History</li>
+      </a>
+      <a href=" ">
+        <li>Our Team </li>
+      </a>
+      <a href=" ">
+        <li>Brand Guidelines </li>
+      </a>
+      <a href=" ">
+        <li>Terms & conditions </li>
+      </a>
+      <a href=" ">
+        <li>privacy policy</li>
+      </a>
+    </ul>
 
+    <!-- PAGE 9 COLUMN 3 ADDED -->
+    <h1 id="col3heading"> Services </h1>
+    <ul type="none" id="col3">
+      <a href=" ">
+        <li>How to Orfer </li>
+      </a>
+      <a href=" ">
+        <li>Our Product </li>
+      </a>
+      <a href=" ">
+        <li>Order Status </li>
+      </a>
+      <a href=" ">
+        <li>Promo </li>
+      </a>
+      <a href=" ">
+        <li>Payment Method </li>
+      </a>
+    </ul>
 
-  <img src="assets/WhatsApp.png" id="socialmedia">
-
-  <h1 id="col2heading"> About </h1>
-  <ul type="none" id="col2">
-    <li>History</li>
-    <li>Our Team </li>
-    <li>Brand Guidelines </li>
-    <li>Terms & conditions </li>
-    <li>privacy policy</li>
-  </ul>
-
-
-  <h1 id="col3heading"> Services </h1>
-  <ul type="none" id="col3">
-    <li>How to Orfer </li>
-    <li>Our Product </li>
-    <li>Order Status </li>
-    <li>Promo </li>
-    <li>Payment Method </li>
-  </ul>
-
-  <h1 id="col4heading"> Others </h1>
-  <ul type="none" id="col4">
-    <li>Contact Us </li>
-    <li>Help </li>
-    <li> Privacy </li>
-    
-  </ul>
-
-
-</div>
-
+    <!-- PAGE 9 COLUMN 4 ADDED -->
+    <h1 id="col4heading"> Others </h1>
+    <ul type="none" id="col4">
+      <a href=" ">
+        <li>Contact Us </li>
+      </a>
+      <a href=" ">
+        <li>Help </li>
+      </a>
+      <a href=" ">
+        <li> Privacy </li>
+      </a>
+    </ul>
+  </div>
 </body>
 
 </html>
